fix card spacing

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -26,7 +26,7 @@
 .card__image {
   width: 100%;
   height: 413px;
-  padding-bottom: 12px;
+  margin-bottom: 12px;
   display: block;
   border-radius: 8px;
   cursor: pointer;
